--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxtjs/axios": "^5.0.0",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "pluralize": "^7.0.0"
   },
   "devDependencies": {
     "node-sass": "^4.9.4",
