--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
-    "pluralize": "^7.0.0"
+    "pluralize": "^7.0.0",
+    "vue-scrollto": "^2.13.0"
   },
   "devDependencies": {
     "node-sass": "^4.9.4",
