Add client-only plugin and add <no-ssr> markup

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
     "pluralize": "^7.0.0",
-    "vue-scrollto": "^2.13.0"
+    "vue-scrollto": "^2.13.0",
+    "vue-select": "^2.5.1"
   },
   "devDependencies": {
     "node-sass": "^4.9.4",
